--- a/lib/plausible_web/templates/email/trial_over_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_over_email.html.eex
@@ -3,4 +3,4 @@ Your free Plausible trial has now expired. Upgrade your account to continue rece
 <%= link("Upgrade now", to: PlausibleWeb.Router.Helpers.billing_url(PlausibleWeb.Endpoint, :choose_plan)) %>
 <br /><br />
 
-We will keep recording stats for another month to give you time to upgrade.
+We will keep recording stats for <%= @extra_offset %> days to give you time to upgrade.
