Improve print dashboard css (#3754)
* Improve print dashboard CSS

* More improvements

--- a/lib/plausible_web/templates/layout/_footer.html.heex
+++ b/lib/plausible_web/templates/layout/_footer.html.heex
@@ -39,7 +39,7 @@
         <% end %>
       </div>
       <div class="grid grid-cols-2 gap-8 xl:col-span-2">
-        <div class="md:grid md:grid-cols-2 md:gap-8">
+        <div class="md:grid md:grid-cols-2 md:gap-8 print:hidden">
           <div>
             <h4 class="text-sm font-semibold tracking-wider text-gray-400 uppercase leading-5">
               Why Plausible?
@@ -154,7 +154,7 @@
             </ul>
           </div>
         </div>
-        <div class="md:grid md:grid-cols-2 md:gap-8">
+        <div class="md:grid md:grid-cols-2 md:gap-8 print:hidden">
           <div>
             <h4 class="text-sm leading-5 font-semibold tracking-wider text-gray-400 uppercase">
               Community
