Add more custom properties to be tracked (#3778)
We just released support for multiple custom property filters, but our demo/live setup
does not have many useful custom properties. This PR adds a few more to allow
better slicing-and-dicing.

--- a/lib/plausible_web/templates/layout/_tracking.html.heex
+++ b/lib/plausible_web/templates/layout/_tracking.html.heex
@@ -19,7 +19,9 @@
       plausible('pageview', {
         u: pageUrl,
         props: {
-          logged_in: <%= is_map(@conn.assigns[:current_user]) %>
+          logged_in: <%= is_map(@conn.assigns[:current_user]) %>,
+          theme: '<%= if @conn.assigns[:current_user], do: @conn.assigns[:current_user].theme, else: "system" %>',
+          browser_language: navigator.language || navigator.userLanguage
         }
       })
     </script>
